--- a/Frontend/Landing_page/src/app/booking/booking.component.html
+++ b/Frontend/Landing_page/src/app/booking/booking.component.html
@@ -1,7 +1,7 @@
 <div class="container-fluid" id="booking">
   <!-- Hero Section -->
   <div class="hero-section">
-    <h1 class="display-4">Welcome to MyRNM APPLICATION HERE</h1>
+    <h1 class="display-4">Welcome to MyRNM</h1>
     <p class="lead">
       Your journey to the perfect car starts here. Explore our wide range of
       Renault, Nissan, and Mitsubishi vehicles, find your ideal model, and book
