--- a/Frontend/Admin/src/app/admin-dashbaord/admin-dashbaord.component.html
+++ b/Frontend/Admin/src/app/admin-dashbaord/admin-dashbaord.component.html
@@ -92,7 +92,7 @@
           </div>
           <!-- End Title -->
           <div class="chart">
-            <canvas id="Chart1" style="width: 100%; height: 400px; ">{{chart}}</canvas>
+            <canvas id="Chart1" style="width: 100%; height: 400px; "></canvas>
           </div>
           <!-- End Chart -->
         </div>
@@ -108,7 +108,7 @@
           </div>
           <!-- End Title -->
           <div class="chart">
-            <canvas id="Chart2" style="width: 100%; height: 400px; ">{{chart2}}</canvas>
+            <canvas id="Chart2" style="width: 100%; height: 400px; "></canvas>
           </div>
           <!-- End Chart -->
         </div>
@@ -123,7 +123,7 @@
              
             </div>
         </div>
-        <canvas id="Chart3" style="width: 100%; height: 450px;">{{chart3}}</canvas>
+        <canvas id="Chart3" style="width: 100%; height: 450px;"></canvas>
       </div>
 
       <div class="col-lg-5">
@@ -132,7 +132,7 @@
             <div class="left">
               <h6 class="text-medium mb-2">Feedback Analysis</h6>
             </div>
-            <div class="right">
+            <!-- <div class="right">
               <div class="select-style-1 mb-2">
                 <div class="select-position select-sm">
                   <select class="bg-light"  [(ngModel)]="selectedYear">
@@ -141,8 +141,8 @@
                   </select>
                 </div>
               </div>
-              <!-- end select -->
-            </div>
+               end select 
+            </div> -->
           </div>
           <!-- End Title -->
           <div class="chart">
@@ -172,7 +172,7 @@
                 </li>
               </ul>
             </div>
-            <canvas id="Chart4" style="width: 100%; height: 420px;">{{chart4}}</canvas>
+            <canvas id="Chart4" style="width: 100%; height: 420px;"></canvas>
           </div>
           <!-- End Chart -->
         </div>
