--- a/Frontend/Admin/src/app/admin-dashbaord/admin-dashbaord.component.css
+++ b/Frontend/Admin/src/app/admin-dashbaord/admin-dashbaord.component.css
@@ -2731,7 +2731,7 @@ h6,
 }
 .single-notification .notification .content {
   display: block;
-  max-width: 800px;
+  /* max-width: 800px; */
 }
 .single-notification .notification .content h6 {
   margin-bottom: 15px;
