demo front page

--- a/Frontend/Landing_page/src/app/contact/contact.component.html
+++ b/Frontend/Landing_page/src/app/contact/contact.component.html
@@ -1,4 +1,4 @@
-<section id="contact" class="bg-image" style="background-image: url('/image.jpg')">
+<section id="contact" class="bg-image" style="background-image: url('/image.jpg')" id="contact">
   <!-- Overlay for better contrast -->
   <div class="overlay"></div>
 
