--- a/Frontend/Landing_page/src/app/home/home.component.html
+++ b/Frontend/Landing_page/src/app/home/home.component.html
@@ -1,4 +1,4 @@
-<app-header></app-header>
+<!-- <app-header></app-header> -->
 <section class="home" id="home">
   <div class="video-container">
     <video class="d-block w-100" autoplay muted loop>
@@ -15,4 +15,4 @@
 <app-feedback></app-feedback>
 <app-logo></app-logo>
 
-<app-footer></app-footer>
+<!-- <app-footer></app-footer> -->
