--- a/Frontend/Landing_page/src/app/app.component.css
+++ b/Frontend/Landing_page/src/app/app.component.css
@@ -21,5 +21,5 @@
 /* Style for the icon inside the button */
 .scroll-to-top-btn i {
   font-size: 36px;  /* Size of the icon */
-  color: black;  /* Color of the icon */
+  color: black;  /* Change icon color to black */
 }
