--- a/Frontend/Landing_page/src/app/header/header.component.css
+++ b/Frontend/Landing_page/src/app/header/header.component.css
@@ -3,6 +3,8 @@
   padding: 20px 40px;
   background-color: black;
   box-shadow: 0 2px 10px rgba(249, 249, 249, 0.822);
+    /* Ensures it stays on top of other content */
+
 }
 
 /* Styling for the top section with logo and company name */
