--- a/Frontend/Landing_page/src/app/car-selection/car-selection.component.html
+++ b/Frontend/Landing_page/src/app/car-selection/car-selection.component.html
@@ -1,8 +1,9 @@
+<app-header></app-header>
 <div class="page-container" [class.shifted]="isFilterSidebarOpen">
   <header class="header-section">
     <h1 class="header-title">Online Test Drive Booking</h1>
     <p class="header-subtitle">Driving your dreams forward</p>
-    <a href="/home" class="btn btn-primary btn-lg home-icon">Back to Home</a>
+    <!-- <a href="/home" class="btn btn-primary btn-lg home-icon">Back to Home</a> -->
   </header>
 
   <div class="main-body" [class.shifted]="isFilterSidebarOpen">
@@ -591,3 +592,4 @@
 
 <br /><br />
 }
+<app-footer></app-footer>
