--- a/Frontend/Landing_page/src/app/car-selection/car-selection.component.css
+++ b/Frontend/Landing_page/src/app/car-selection/car-selection.component.css
@@ -5,9 +5,10 @@
 }
 
 .header-section {
-  background: linear-gradient(45deg, #000000, #3f3f3f);
+  /* background: linear-gradient(45deg, #000000, #3f3f3f); */
+  background: white;
   padding: 1rem;
-  color: white;
+  color: rgb(0, 0, 0);
   animation: bounceIn 2s ease-in-out;
 }
 
@@ -23,7 +24,7 @@
 
 .header-subtitle {
   font-size: 1.3rem;
-  color: whitesmoke;
+  color: rgb(0, 0, 0);
   margin-top: 0.5rem;
 }
 
