--- a/Frontend/Landing_page/src/app/contact/contact.component.html
+++ b/Frontend/Landing_page/src/app/contact/contact.component.html
@@ -1,5 +1,5 @@
 
-<section id="contact" class="bg-image" style="background-image: url('/image.png')">
+<section id="contact" class="bg-image" style="background-image: url('/image.jpg')">
   <!-- Overlay for better contrast -->
   <div class="overlay"></div>
 
