--- a/Frontend/Landing_page/src/app/feedback/feedback.component.html
+++ b/Frontend/Landing_page/src/app/feedback/feedback.component.html
@@ -1,4 +1,4 @@
-<div class="container-fluid feedback d-flex justify-content-center align-items-center ">
+<div class="container-fluid feedback d-flex justify-content-center align-items-center mb-3" id="feedback">
     <div class="main">
       <div class="row w-100">
         <div class="col-12 col-sm-6 col-md-6 d-flex justify-content-center align-items-center">
