--- a/Frontend/Landing_page/src/app/footer/footer.component.html
+++ b/Frontend/Landing_page/src/app/footer/footer.component.html
@@ -15,6 +15,7 @@
           <li><a href="#booking">Booking</a></li>
           <li><a href="#service-list">Services</a></li>
           <li><a href="#contact">Contact</a></li>
+          <li><a href="#feedback">Feedback</a></li>
         </ul>
       </div>
 
