--- a/Frontend/Landing_page/src/app/app.component.html
+++ b/Frontend/Landing_page/src/app/app.component.html
@@ -1,4 +1,4 @@
-<app-header></app-header>
+<!-- <app-header></app-header> -->
 <router-outlet></router-outlet>
 <app-chatbot></app-chatbot>
 
@@ -8,4 +8,4 @@
 </button>
 
 
-<app-footer></app-footer>
+<!-- <app-footer></app-footer> -->
