--- a/Frontend/Car Selection Page/Car-Selection-Page/src/app/car-selection/car-selection.component.html
+++ b/Frontend/Car Selection Page/Car-Selection-Page/src/app/car-selection/car-selection.component.html
@@ -452,7 +452,7 @@
       <h2>Book Your Test Drive Slot</h2>
       <br /><br />
 
-      <form id="slot-booking-form">
+      <!-- <form id="slot-booking-form"> -->
         <div class="formbold-steps">
           <ul>
             <li class="formbold-step-menu1" [ngClass]="{ active: currentStep === 1 }">
@@ -581,7 +581,7 @@
             {{ currentStep === 3 ? "Submit" : "Next Step" }}
           </button>
         </div>
-      </form>
+      <!-- </form> -->
     </div>
 
 
