--- a/Frontend/Landing_page/src/app/feedback/feedback.component.css
+++ b/Frontend/Landing_page/src/app/feedback/feedback.component.css
@@ -1,4 +1,4 @@
-.card {
+/* .card {
     display: flex;
     flex-direction: column;
     width: 100%;
@@ -11,32 +11,28 @@
     overflow: hidden;
     padding: 10px;
     justify-content: space-between;
-    border-radius: 8px;
-    transition: all 0.3s ease;
-}
-
-.card:hover {
+    border-radius: 8px; 
+    transition: all 0.3s ease; 
+  }
+  .card:hover {
     box-shadow: 0 6px 15px rgba(0, 0, 0, 0.15);
     transform: translateY(-5px);
     background-color: #f9f9f9;
-}
-
-.card-body {
+  }
+  .card-body {
     display: flex;
     flex-direction: column;
     justify-content: space-between;
     text-align: center;
     height: 100%;
-}
-
-.card-title {
+  }
+  .card-title {
     font-size: 1.25rem;
     font-weight: bold;
     margin-bottom: 0.5rem;
-    color: #333;
-}
-
-.card-text {
+    color: #333; 
+  }
+  .card-text {
     font-size: 1rem;
     color: #555;
     flex-grow: 1;
@@ -45,60 +41,58 @@
     display: -webkit-box;
     -webkit-line-clamp: 3;
     -webkit-box-orient: vertical;
-}
-
-.owl-carousel .item {
+  }
+  .owl-carousel .item {
     display: flex;
     justify-content: center;
     align-items: stretch;
-}
-
-.owl-nav button {
+  }
+  .owl-nav button {
     background-color: #f0f0f0;
     border: none;
     padding: 10px;
     border-radius: 50%;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-}
-
-.owl-nav button:hover {
+  }
+  .owl-nav button:hover {
     background-color: #e0e0e0;
-}
+  }
+   */
 .rating {
-    font-size: 30px;  /* Adjust the size as needed */
+    font-size: 30px;  
     cursor: pointer;
     transition: transform 0.2s ease-in-out;
   }
   
   .rating:hover {
-    transform: scale(1.2);  /* Adds a slight zoom effect on hover */
+    transform: scale(1.2); 
   }
   
 
 .text-danger {
-    text-align: left;
-    font-size: 0.875rem;
+  text-align: left;
+  font-size: 0.875rem;
 }
 
 .form-group.mb-3 {
-    margin-bottom: 15px;
+  margin-bottom: 15px;
 }
 
 .feedback .card-body {
-    background-color:rgb(247, 245, 245);
-    border-radius: 8px;
-    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-    padding: 20px;
-    max-width: 600px;
-    width: 100%;
+  background-color:rgb(247, 245, 245);
+  border-radius: 8px;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+  padding: 20px;
+  max-width: 600px;
+  width: 100%;
 }
 
 .feedback img {
-    max-width: 100%;
+  max-width: 100%;
 }
 
 @media (max-width: 767px) {
-    .feedback .row {
-        flex-direction: column;
-    }
+  .feedback .row {
+      flex-direction: column;
+  }
 }
