--- a/Frontend/Landing_page/src/app/header/header.component.html
+++ b/Frontend/Landing_page/src/app/header/header.component.html
@@ -13,31 +13,54 @@
     <div class="user-options">
       <span class="privacy-policy">Privacy Policy</span>
       <a routerLink="/location" class="user-location">
-        <i class="fas fa-location-pin"></i> Location
+        <i class="fas fa-map-marker-alt"></i> Location
       </a>
 
+
+      @if (name=="") {
+<div>
       <!-- Profile Button with Click Event to Toggle Box -->
       <span class="user-profile" (click)="toggleProfileBox()">
         <i class="fas fa-user"></i> Profile
-      </span>
+        </span>
 
       <!-- Profile Box (Login/Signup Box) -->
       <div *ngIf="isProfileBoxVisible" class="profile-box">
-        <div class="profile-arrow"></div> <!-- Arrow pointing to profile -->
-        <h4>Login to your RNM Account</h4>
+        <div class="profile-arrow"></div>  <!--Arrow pointing to profile -->
+         <h4>Login to your RNM Account</h4>
         <button (click)="onLogin()">Login</button>
         <button (click)="onSignup()">Sign Up</button>
       </div>
     </div>
-  </div>
+  }
 
+    @if (name!="") {
+    <div>
+      <!-- Profile Button with Click Event to Toggle Box -->
+      <span class="user-profile" (click)="toggleProfileBox()">
+        <i class="fas fa-user"></i>
+         {{name}}
+        <!-- <h1>{{name}}</h1> -->
+      </span>
+
+      <!-- Profile Box (Login/Signup Box) -->
+      <div *ngIf="isProfileBoxVisible" class="profile-box">
+        <div class="profile-arrow"></div>  <!--Arrow pointing to profile -->
+         <h4>Login to your RNM Account</h4>
+        <button (click)="Onlogout()">Logout</button>
+        </div>
+    </div>
+  }
+</div>
+</div>
   <!-- Horizontal Divider Line Below -->
   <div class="divider"></div>
 
   <!-- Navigation Bar -->
   <nav class="nav">
+    
     <ul>
-      <li><a href="#home">Home</a></li>
+      <li><a href="#">Home</a></li>
       <li><a href="#booking">Booking</a></li>
       <li><a href="#service-list">Service</a></li>
       <li><a href="#contact">Contact</a></li>
