--- a/Frontend/Landing_page/src/app/car-selection/car-selection.component.html
+++ b/Frontend/Landing_page/src/app/car-selection/car-selection.component.html
@@ -1,4 +1,4 @@
-<app-header></app-header>
+<!-- <app-header></app-header> -->
 <div class="page-container" [class.shifted]="isFilterSidebarOpen">
   <header class="header-section">
     <h1 class="header-title">Online Test Drive Booking</h1>
@@ -43,7 +43,7 @@
             <a id="q2" href="#brand-section" role="button">Click here to select your car....</a>
           </h2>
         </div>
-        <!--  
+        <!--
                 <div class="answer-wrapper">
                     <img src="/assets/images/newt.webp" alt="Tyre Icon" class="answer-icon" />
                     <p class="answer-text twoa">Tires provide the necessary grip for traction, ensuring safety and
@@ -87,7 +87,7 @@
           <option value="high">Above ₹20 Lakhs</option>
         </select>
       </label>
-    
+
       <label>
         Order By:
         <select (change)="sortByOrder($event)" class="baloo">
@@ -97,7 +97,7 @@
           <option value="booking">Availability</option>
         </select>
       </label>
-    
+
       <label>
         Rating:
         <select (change)="filterByRating($event)" class="baloo">
@@ -109,7 +109,7 @@
           <option value="5">5 Stars</option>
         </select>
       </label>
-    
+
       <label>
         Engine Type:
         <select (change)="filterByEngine($event)" class="baloo">
@@ -119,7 +119,7 @@
           <option value="electric">Electric</option>
         </select>
       </label>
-    
+
       <label>
         Seater:
         <select (change)="filterBySeater($event)" class="baloo">
@@ -129,7 +129,7 @@
           <option value="7">7-Seater</option>
         </select>
       </label>
-    
+
       <label>
         Transmission:
         <select (change)="filterByTransmission($event)" class="baloo">
@@ -138,7 +138,7 @@
           <option value="automatic">Automatic</option>
         </select>
       </label>
-    
+
       <label>
         Availability:
         <select (change)="filterByAvailability($event)" class="baloo">
@@ -148,7 +148,7 @@
           <option value="discontinued">Discontinued</option>
         </select>
       </label>
-    
+
       <label>
         Fuel Efficiency:
         <select (change)="filterByFuelEfficiency($event)" class="baloo">
@@ -159,9 +159,9 @@
           <option value="20+">Above 20 km/l</option>
         </select>
       </label>
-      
-    
-      <!-- <       
+
+
+      <!-- <
         Color:
         <select (change)="filterByColor($event)" class="baloo">
           <option value="">All</option>
@@ -172,7 +172,7 @@
           <option value="grey">Grey</option>
         </select>
       </label> -->
-    
+
       <label>
         Drive Type:
         <select (change)="filterByDriveType($event)" class="baloo">
@@ -183,7 +183,7 @@
           <option value="4wd">4-Wheel Drive</option>
         </select>
       </label>
-    
+
       <label>
         Warranty:
         <select (change)="filterByWarranty($event)" class="baloo">
@@ -195,7 +195,7 @@
         </select>
       </label>
     </div>
-    
+
     <!-- <button class="apply-filters baloo" (click)="applyFilters()">Apply!</button> -->
   </div>
 </div>
@@ -274,7 +274,7 @@
               <strong>Release Year:</strong> {{ car.releaseYear }}
             </p>
             <p class="car-price car-details space">
-              <strong>Price:</strong> INR {{ car.price }} 
+              <strong>Price:</strong> INR {{ car.price }}
               <!-- {{ car.price.USD }} -->
             </p>
             <p class="car-bookings car-details space">
@@ -364,7 +364,7 @@
             <strong>Release Year:</strong> {{ selectedCar.releaseYear }}
           </p>
           <p class="car-price car-details space">
-            <strong>Price:</strong> INR {{ selectedCar.price }} 
+            <strong>Price:</strong> INR {{ selectedCar.price }}
             <!-- {{ selectedCar.price.USD }} -->
           </p>
           <p class="car-bookings car-details space">
@@ -519,7 +519,7 @@
             <div *ngIf="preferredDate.invalid && (preferredDate.dirty || preferredDate.touched)" class="error">
               <small *ngIf="preferredDate.errors?.['required']">Preferred date is required.</small>
             </div>
-            
+
 
             <label for="time-slot" class="formbold-form-label">Preferred Time Slot</label>
             <select id="time-slot" class="formbold-form-input" [(ngModel)]="formData.timeSlot" name="timeSlot"
@@ -592,4 +592,4 @@
 
 <br /><br />
 }
-<app-footer></app-footer>
+<!-- <app-footer></app-footer> -->
