--- a/Frontend/Landing_page/src/app/bookings/bookings.component.css
+++ b/Frontend/Landing_page/src/app/bookings/bookings.component.css
@@ -25,7 +25,7 @@
 .table th,
 .table td {
   vertical-align: middle;
-  padding: 0.4rem;
+  /* padding: 0.4rem; */
   text-align: center;
 }
 
@@ -103,10 +103,16 @@
   font-weight: 600;
 }
 #book {
-  margin-left: 250px; /* Adjust based on the width of the navbar */
+  margin-left: 250px;
+   /* Adjust based on the width of the navbar */
   width: calc(
     100% - 250px
   ); /* Make the dashboard take the rest of the available space */
   padding: 20px;
   box-sizing: border-box;
+}
+
+.table-responsive
+{
+ width: 100%;
 }
