--- a/Frontend/Landing_page/src/app/bookings/bookings.component.html
+++ b/Frontend/Landing_page/src/app/bookings/bookings.component.html
@@ -21,8 +21,8 @@
   </div>
 
   <!-- Bookings Table -->
-  <div class="table-responsive w-100">
-    <table class="table table-responsive table-striped">
+  <div class="container-fluid">
+    <table class="table table-striped w-100">
       <thead class="table-light">
         <tr>
           <th>User Id</th>
