admin change password functionality

--- a/Frontend/Landing_page/src/app/admin-dashbaord/admin-dashbaord.component.html
+++ b/Frontend/Landing_page/src/app/admin-dashbaord/admin-dashbaord.component.html
@@ -86,7 +86,7 @@
         <div class="card-style mb-30">
           <div class="title d-flex flex-wrap justify-content-between">
             <div class="left">
-              <h6 class="text-medium mb-10">Yearly Stats</h6>
+              <h6 class="text-medium mb-10">User Registration Stats</h6>
             </div>
            
           </div>
@@ -102,7 +102,7 @@
         <div class="card-style mb-30">
           <div class="title d-flex flex-wrap align-items-center justify-content-between">
             <div class="left">
-              <h6 class="text-medium mb-30">Car Sales</h6>
+              <h6 class="text-medium mb-30">Car Bookings</h6>
             </div>
             
           </div>
@@ -118,7 +118,7 @@
         <div id="legend3">
             <div class="title d-flex flex-wrap justify-content-between">
               <div class="left">
-                <h6 class="text-medium mb-10">Cars Registered by Users (2024) </h6>
+                <h6 class="text-medium mb-10">Cars Registered by Users </h6>
               </div>
              
             </div>
