--- a/Frontend/Landing_page/src/app/header/header.component.html
+++ b/Frontend/Landing_page/src/app/header/header.component.html
@@ -48,6 +48,7 @@
         <div class="profile-arrow"></div>  <!--Arrow pointing to profile -->
          <h4>Login to your RNM Account</h4>
         <button (click)="Onlogout()">Logout</button>
+        <button (click)="OnEdit()">Edit</button>
         </div>
     </div>
   }
