--- a/Frontend/Landing_page/src/app/car-selection/car-selection.component.html
+++ b/Frontend/Landing_page/src/app/car-selection/car-selection.component.html
@@ -473,7 +473,7 @@
           <div>
             <label for="name" class="formbold-form-label">User name</label>
             <input type="text" name="name" id="firstname" placeholder="Enter your name" class="formbold-form-input"
-              [(ngModel)]="formData.name" #name="ngModel" required />
+              [(ngModel)]="formData.name" #name="ngModel" required readonly />
             <div *ngIf="name.invalid && (name.dirty || name.touched)" class="error">
               <!-- <small *ngIf="name.errors?.['required']">Name is required.</small> -->
             </div>
@@ -485,7 +485,7 @@
               <input type="text" name="phone" id="phone" class="formbold-form-input"
                 placeholder="Enter your phone number" [(ngModel)]="formData.phone" #phone="ngModel" required
                 pattern="^\d{10}$" maxlength="10" minlength="10"
-                [ngClass]="{'is-invalid': phone.invalid && (phone.dirty || phone.touched)}" />
+                [ngClass]="{'is-invalid': phone.invalid && (phone.dirty || phone.touched)}"  />
               <div *ngIf="phone.invalid && (phone.dirty || phone.touched)" class="error">
                 <!-- <small *ngIf="phone.errors?.['required']">Phone number is required.</small>
                 <small *ngIf="phone.errors?.['pattern']">Phone number must be exactly 10 digits.</small> -->
@@ -495,7 +495,7 @@
             <div>
               <label for="email" class="formbold-form-label">Email Address</label>
               <input type="email" name="email" id="email" placeholder="Enter your email" class="formbold-form-input"
-                [(ngModel)]="formData.email" #email="ngModel" required />
+                [(ngModel)]="formData.email" #email="ngModel" required readonly />
               <div *ngIf="email.invalid && (email.dirty || email.touched)" class="error">
                 <!-- <small *ngIf="email.errors?.['required']">Email is required.</small> -->
                 <small *ngIf="email.errors?.['email']">Invalid email format.</small>
@@ -506,7 +506,7 @@
           <div>
             <label for="address" class="formbold-form-label">Address</label>
             <input type="text" name="address" id="address" placeholder="Enter your address" class="formbold-form-input"
-              [(ngModel)]="formData.address" />
+              [(ngModel)]="formData.address" re />
           </div>
         </div>
 
