--- a/Frontend/Landing_page/src/app/query/query.component.html
+++ b/Frontend/Landing_page/src/app/query/query.component.html
@@ -21,14 +21,9 @@
       </div>
       <div class="action">
        
-        <button class="more-btn dropdown-toggle" id="moreAction" data-bs-toggle="dropdown" aria-expanded="false">
-          <i class="lni lni-more-alt"></i>
+        <button class="more-btn" id="moreAction"  aria-expanded="false" (click)="openForm()">
+          <i class="bi bi-telegram" style="font-size: 30px;"></i> 
         </button>
-        <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="moreAction">
-          <li class="dropdown-item">
-            <a href="#0" class="text-gray">Reply</a>
-          </li>
-        </ul>
       </div>
     </div>
   </div>
@@ -41,5 +36,33 @@
             (click)="loadMore()">
       Load More
     </button>
+  </div>
+</div>
+
+<div class="form-popup" *ngIf="isFormVisible">
+  <div class="form-container shadow-lg p-4 rounded"><br>
+    <!-- <h2 class="text-center mb-4">Response</h2> -->
+    <form (ngSubmit)="onSubmit()" #emailForm="ngForm">
+      
+      <div class="form-group">
+        <label for="email">Recipient Email:</label>
+        <input type="email" id="email" [(ngModel)]="email" name="email" class="form-control" required />
+      </div>
+
+      <div class="form-group">
+        <label for="subject">Subject:</label>
+        <input type="text" id="subject" [(ngModel)]="subject" name="subject" class="form-control" required />
+      </div>
+
+      <div class="form-group">
+        <label for="message">Message:</label>
+        <textarea id="message" [(ngModel)]="message" name="message" rows="4" class="form-control" required></textarea>
+      </div>
+
+      <div class="form-group text-center">
+        <button type="submit" class="btn btn-primary mx-2">Send </button>
+        <button type="button" class="btn btn-danger mx-2" (click)="closeForm()">Close</button>
+      </div>
+    </form>
   </div>
 </div>
